all the pages are done.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         "offers": {
           "@type": "Offer",
           "priceCurrency": "UAH",
-          "price": "900",
+          "price": "800",
           "itemCondition": "https://schema.org/NewCondition",
           "availability": "https://schema.org/InStock",
           "seller": {
@@ -78,7 +78,7 @@
           <span class="lang__item">Шахмати (30х30) (38х38)</span> |
           <a href="shahi.html" class="lang__item">Шахи (52х52)</a>
           |
-          <a href="ru.html" class="lang__item">Шахматы 3в1</a>
+          <a href="ru.html" class="lang__item">Шахматы 3в1 (34x34)</a>
         </div>
         <div class="phone">
           <a href="tel:+380669842257" class="phone__item">(066) 98-422-57</a>
@@ -103,7 +103,7 @@
         <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
           <meta itemprop="priceCurrency" content="UAH" />
           <div class="promo__price" itemprop="price">
-            <span class="price__amount">900</span>
+            <span class="price__amount">800</span>
             <span class="price__currency">грн</span>
           </div>
         </div>
@@ -136,20 +136,20 @@
           <div class="about__content">
             <h3>Ціна</h3>
             <p>
-              Шахмати коштують 900 грн. У нас ви знайдете шахмати для гри, і ми
+              Шахмати коштують 800 грн. У нас ви знайдете шахмати для гри, і ми
               враховуємо кожне ваше замовлення, що підтверджено 800+
               задоволеними клієнтами!
             </p>
 
             <h3>Україна</h3>
             <p>
-              Якщо ви шукаєте можливість «шахмати грати на двох» – замовляйте
-              вже зараз. Доставка по всій Україні. Насолоджуйтесь грою та
-              створюйте власні стратегії!
+              В комплекті 32 великих фігури із дерева горіха, смерековими
+              планками та малюнком на березовому шпоні. Це класичний вигляд для
+              насолоди грою. Вже в Україіні!
             </p>
           </div>
           <img
-            src="image/chess_gift.png"
+            src="image/all_chess.webp"
             class="about__img"
             width="330"
             height="300"
@@ -201,7 +201,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/mini_1.jpg"
+                src="image/mini_1_uk.webp"
                 width="170"
                 height="128"
                 loading="lazy"
@@ -216,7 +216,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/mini_2.jpg"
+                src="image/mini_2_uk.webp"
                 width="170"
                 height="128"
                 loading="lazy"
@@ -231,7 +231,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/mini_3.jpg"
+                src="image/mini_3_uk.webp"
                 width="170"
                 height="128"
                 loading="lazy"
@@ -242,7 +242,7 @@
           </ol>
           <div class="photo__frame">
             <img
-              src="image/image_big.jpg"
+              src="image/image_big_uk.webp"
               width="550"
               height="413"
               loading="lazy"
@@ -252,17 +252,19 @@
           <div class="photo__content">
             <h3>В Наявності:</h3>
             <ul>
-              <li>- 30х30мм Розмір шахматної дошки</li>
-              <li>- 38х38мм Розмір шахматної дошки</li>
-              <li>– Фігури великі з дерева горіха</li>
-              <li>– Планки зі смереки</li>
-              <li>– Малюнок на березовому шпоні</li>
-              <li>- 16 пішаків</li>
-              <li>- 4 коні</li>
-              <li>- 4 слони</li>
-              <li>- 4 тури</li>
-              <li>- 2 король</li>
-              <li>- 2 ферзь</li>
+              <span>–– 999 ГРН ––</span>
+              <li>- шахмотна доска розміром 38х38мм</li>
+              <li>- деревʼяні фігури</li>
+              <li>– пластикові шашки (подарунок)</li>
+              <br />
+              <span>–– 800 ГРН ––</span>
+              <li>- шахмотна доска розміром 30х30мм</li>
+              <li>- деревʼяні фігури</li>
+              <li>– пластикові шашки (подарунок)</li>
+              <br />
+              <span>-ДОДАТКОВО-</span>
+              <li>– якщо дерев яні шашки (+150 грн)</li>
+              <li>– якщо шахові фігури з пластику (дешевше)</li>
             </ul>
             <button class="button__buy">КУПИТИ</button>
           </div>
@@ -620,7 +622,7 @@
                 required
               />
               <input type="hidden" name="title" value="Шахмати (укр)" />
-              <input type="hidden" name="price" id="price" value="900" />
+              <input type="hidden" name="price" id="price" value="800" />
               <input type="hidden" name="payment" id="payment" value="cash" />
               <input type="hidden" name="service" id="service" value="nova" />
               <input type="submit" value="Готово" />
