--- a/ru.html
+++ b/ru.html
@@ -6,7 +6,7 @@
     <title>Шахматы «Деревянные» – Купить з Доставкой (+800 Заказов)</title>
     <meta
       name="description"
-      content="Приобретайте Шахматы Деревянные - орех (52х52мм) ✔️ Быстрая доставка (1-2 дня), выгодная цена. Ознакомьтесь с фото и заказывайте шахматы в подарок (800+ заказов)!"
+      content="Приобретайте Шахматы Деревянные - (34x34) ✔️ Быстрая доставка (1-2 дня), выгодная цена. Ознакомьтесь с фото и заказывайте шахматы в подарок (800+ заказов)!"
     />
     <meta
       name="keywords"
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Шахматы Купить" />
     <meta
       property="og:description"
-      content="Приобретайте Шахматы Деревянные - орех (52х52мм) ✔️ Быстрая доставка (1-2 дня), выгодная цена. Ознакомьтесь с фото и заказывайте шахматы в подарок (800+ заказов)!"
+      content="Приобретайте Шахматы Деревянные - (34x34) ✔️ Быстрая доставка (1-2 дня), выгодная цена. Ознакомьтесь с фото и заказывайте шахматы в подарок (800+ заказов)!"
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Шахматы ТУТ" />
@@ -78,7 +78,7 @@
           |
           <a href="shahi.html" class="lang__item">Шахи (52х52см)</a>
           |
-          <span class="lang__item">Шахматы 3в1</span>
+          <span class="lang__item">Шахматы 3в1 (34x34)</span>
         </div>
         <div class="phone">
           <a href="tel:+380669842257" class="phone__item">(066) 98-422-57</a>
@@ -202,7 +202,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/mini_1.jpg"
+                src="image/mini_1_ru.webp"
                 width="170"
                 height="128"
                 loading="lazy"
@@ -217,7 +217,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/mini_2.jpg"
+                src="image/mini_2_ru.webp"
                 width="170"
                 height="128"
                 loading="lazy"
@@ -232,7 +232,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/mini_3.jpg"
+                src="image/mini_3_ru.webp"
                 width="170"
                 height="128"
                 loading="lazy"
@@ -243,7 +243,7 @@
           </ol>
           <div class="photo__frame">
             <img
-              src="image/image_big.jpg"
+              src="image/image_big_ru.webp"
               width="550"
               height="413"
               loading="lazy"
@@ -251,20 +251,14 @@
             />
           </div>
           <div class="photo__content">
-            <h3>Сколько фігур:</h3>
+            <h3>В Наличии</h3>
             <ul>
-              <li>- всего 32 шахматных фигур</li>
-              <li>- 2 короля (шах, малик, царь)</li>
-              <li>- 2 ферзя (королева, царица, дама)</li>
-              <li>- 4 ладьи (башня, тура)</li>
-              <li>- 4 слона (бегун, гонец, охотник)</li>
-              <li>– 4 коня (прыгун, рыцарь, всадник)</li>
-              <li>– 16 пешек (солдат, крестьянин)</li>
-              <span>Характеристики:</span>
-              <li>- 52х52мм Розмір шахматної дошки</li>
-              <li>– Фигуры крупные, из орехового дерева</li>
-              <li>– Планки из сосны</li>
-              <li>– Рисунок на березовой фанере</li>
+              <span>––900 ГРН ––</span>
+              <li>- размер шахматной доски 34x34см</li>
+              <li>– шахи, шашки, нарди</li>
+              <li>- деревянные шахматные фигуры</li>
+              <li>- деревянные фишки</li>
+              <li>- 2 кубика</li>
             </ul>
             <button class="button__buy">КУПИТИ</button>
           </div>
@@ -286,10 +280,11 @@
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Король в шахматах ходит на одну клетку в любом направлении:
-                вертикально, горизонтально или диагонально. Он представляет
-                собой наиболее ценную фигуру в игре, и его защита является одной
-                из основных целей в шахматной стратегии.</span
+                Король (шах, малик, царь) в шахматах ходит на одну клетку в
+                любом направлении: вертикально, горизонтально или диагонально.
+                Он представляет собой наиболее ценную фигуру в игре, и его
+                защита является одной из основных целей в шахматной
+                стратегии.</span
               >
             </dd>
             <img
@@ -313,10 +308,10 @@
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Королева в шахматах может ходить по горизонтали, вертикали и
-                диагонали на любое количество свободных клеток. Это делает
-                королеву одной из наиболее мобильных и сильных фигур на
-                шахматной доске.
+                Королева (ферзя, царица, дама) в шахматах может ходить по
+                горизонтали, вертикали и диагонали на любое количество свободных
+                клеток. Это делает королеву одной из наиболее мобильных и
+                сильных фигур на шахматной доске.
               </span>
             </dd>
             <img
@@ -340,10 +335,10 @@
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Конь в шахматах ходит буквой "Г": два шага в одном направлении
-                (горизонтальном или вертикальном) и затем один шаг
-                перпендикулярно этому направлению. Конь может перепрыгивать
-                через другие фигуры на доске.
+                Конь (прыгун, рыцарь, всадник) в шахматах ходит буквой "Г": два
+                шага в одном направлении (горизонтальном или вертикальном) и
+                затем один шаг перпендикулярно этому направлению. Конь может
+                перепрыгивать через другие фигуры на доске.
               </span>
             </dd>
             <img
@@ -367,9 +362,10 @@
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Слон в шахматах ходит по диагонали на любое количество пустых
-                клеток. Он остается на том же цвете доски, на котором начинал
-                движение, поэтому каждый слон охватывает только половину доски.
+                Слон (бегун, гонец, охотник) в шахматах ходит по диагонали на
+                любое количество пустых клеток. Он остается на том же цвете
+                доски, на котором начинал движение, поэтому каждый слон
+                охватывает только половину доски.
               </span>
             </dd>
             <img
@@ -393,9 +389,10 @@
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Пешка в шахматах атакует и захватывает фигуры, расположенные на
-                диагонали от неё. Когда она делает атакующий ход, она
-                перемещается на клетку, находящуюся на диагонали вперёд.
+                Пешка (солдат, крестьянин) в шахматах атакует и захватывает
+                фигуры, расположенные на диагонали от неё. Когда она делает
+                атакующий ход, она перемещается на клетку, находящуюся на
+                диагонали вперёд.
               </span>
             </dd>
             <img
