--- a/shahi.html
+++ b/shahi.html
@@ -47,7 +47,7 @@
         "offers": {
           "@type": "Offer",
           "priceCurrency": "UAH",
-          "price": "900",
+          "price": "1100",
           "itemCondition": "https://schema.org/NewCondition",
           "availability": "https://schema.org/InStock",
           "seller": {
@@ -80,7 +80,7 @@
           |
           <span class="lang__item">Шахи (52х52)</span>
           |
-          <a href="ru.html" class="lang__item">Шахматы 3в1</a>
+          <a href="ru.html" class="lang__item">Шахматы 3в1 (34x34)</a>
         </div>
         <div class="phone">
           <a href="tel:+380669842257" class="phone__item">(066) 98-422-57</a>
@@ -105,7 +105,7 @@
         <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
           <meta itemprop="priceCurrency" content="UAH" />
           <div class="promo__price" itemprop="price">
-            <span class="price__amount">900</span>
+            <span class="price__amount">1100</span>
             <span class="price__currency">грн</span>
           </div>
         </div>
@@ -138,9 +138,9 @@
           <div class="about__content">
             <h3>Ціна</h3>
             <p>
-              Шахи коштують 900 грн. У інших ви можете знайти колекційні вироби.
-              У нас шахи шашки нарди для гри, ми беремо кількістю, тому маємо
-              800+ Замовлень!
+              Шахи коштують 1100 грн. Фігури із дерева горіха, смерековими
+              планками та малюнком на березовому шпоні. У нас шахи шашки нарди
+              для гри. Понад 800+ Замовлень!
             </p>
             <h3>Україна</h3>
             <p itemprop="description">
@@ -150,7 +150,7 @@
             </p>
           </div>
           <img
-            src="image/chess_gift.png"
+            src="image/all_chess.webp"
             class="about__img"
             width="330"
             height="300"
@@ -202,7 +202,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/mini_1.jpg"
+                src="image/mini_1_uk2.webp"
                 width="170"
                 height="128"
                 loading="lazy"
@@ -217,7 +217,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/mini_2.jpg"
+                src="image/mini_2_uk2.webp"
                 width="170"
                 height="128"
                 loading="lazy"
@@ -232,7 +232,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/mini_3.jpg"
+                src="image/mini_3_uk2.webp"
                 width="170"
                 height="128"
                 loading="lazy"
@@ -243,7 +243,7 @@
           </ol>
           <div class="photo__frame">
             <img
-              src="image/image_big.jpg"
+              src="image/image_big_uk2.webp"
               width="550"
               height="413"
               loading="lazy"
@@ -251,18 +251,21 @@
             />
           </div>
           <div class="photo__content">
-            <h3>В Упаковці:</h3>
+            <h3>В Наявності</h3>
             <ul>
-              <li>– Фігури великі з дерева горіха</li>
-              <li>– Планки зі смереки</li>
-              <li>– Малюнок на березовому шпоні</li>
-              <li>- 16 пішаків</li>
-              <li>- 4 коні</li>
-              <li>- 4 слони</li>
-              <li>- 4 тури</li>
-              <li>- 2 король</li>
-              <li>- 2 ферзь</li>
-              <li>- 52х52мм Розмір шахматної дошки</li>
+              <span>–– 1100 ГРН ––</span>
+              <li>– розмір у відкритому вигляді: 52х52см</li>
+              <li>– дерев яні шахові фігури</li>
+              <li>– дерев яні фішки</li>
+              <li>– 2 кубика</li>
+              <li>– пластикові шашки (подарунок)</li>
+              <br />
+              <span>–– 2800 ГРН ––</span>
+              <li>+ <strong>різьблені фігури (на останьом фото)</strong></li>
+              <br />
+              <span>-ДОДАТКОВО-</span>
+              <li>– якщо дерев яні шашки (+150 грн)</li>
+              <li>– якщо шахові фігури з пластику (дешевше)</li>
             </ul>
             <button class="button__buy">КУПИТИ</button>
           </div>
